--- a/deploy/overlays/stage/frontend/deployment-patch.yaml
+++ b/deploy/overlays/stage/frontend/deployment-patch.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: go
-        image: 937351930975.dkr.ecr.us-west-2.amazonaws.com/k8s-frontend:initial-stage # {"$imagepolicy": "flux-system:storefront-stage"}
+        image: 937351930975.dkr.ecr.us-west-2.amazonaws.com/k8s-frontend:initial-stage # {"$imagepolicy": "flux-system:app-image-policy-latest"}
         resources:
           requests:
             cpu: "100m"
