--- a/deploy/overlays/production/frontend/deployment-patch.yaml
+++ b/deploy/overlays/production/frontend/deployment-patch.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: go
-        image: 937351930975.dkr.ecr.us-east-1.amazonaws.com/k8s-frontend:initial-prod # {"$imagepolicy": "flux-system:app-image-policy-latest"}
+        image: 937351930975.dkr.ecr.us-east-1.amazonaws.com/k8s-frontend:initial-prod # {"$imagepolicy": "flux-system:app-image-policy-semver"}
         resources:
         imagePullPolicy: Always
         resources:
