--- a/deploy/infra-argo/monitoring/prometheus-values.yaml
+++ b/deploy/infra-argo/monitoring/prometheus-values.yaml
@@ -17,6 +17,7 @@ prometheus:
     kubeStateMetrics:
         enabled: false
 
+    nameOverride: prometheus
     serviceAccounts:
         server:
             create: true
