--- a/deploy/infra-argo/monitoring/Chart.yaml
+++ b/deploy/infra-argo/monitoring/Chart.yaml
@@ -6,6 +6,9 @@ type: application
 version: 2.0.0
 appVersion: "2.0"
 dependencies:
+- name: prometheus
+  version: 14.6.0
+  repository: https://prometheus-community.github.io/helm-charts
 - name: grafana
   version: 6.16.0
   repository: https://grafana.github.io/helm-charts
