--- a/deploy/infra-argo/monitoring/grafana-values.yaml
+++ b/deploy/infra-argo/monitoring/grafana-values.yaml
@@ -15,6 +15,7 @@
 # Parameter overrides for Grafana chart
 #                
 grafana:
+    nameOverride: grafana
     serviceAccount:
         create: true
         name: grafana-service-account
