--- a/bootstrap-apps-argo/templates/application-storefront.yaml
+++ b/bootstrap-apps-argo/templates/application-storefront.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: storefront 
   namespace: argocd
+  finalizers:
+  - resources-finalizer.argocd.argoproj.io  
 spec:
   project: sarathy-project
   source:
@@ -13,7 +15,7 @@ spec:
     kustomize:
       version: v4.1.3    
   destination:
-    server: https://kubernetes.default.svc
+    server: {{ .Values.spec.destination.server }}
     namespace: stage
   syncPolicy:
     automated:
