--- a/bootstrap-apps-argo/templates/application-storefront.yaml
+++ b/bootstrap-apps-argo/templates/application-storefront.yaml
@@ -7,7 +7,7 @@ metadata:
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
-  project: bootstrap-project
+  project: sarathy-project
   source:
     repoURL: git@github.com:vijayansarathy/fluxv2-deployment-apps.git
     targetRevision: HEAD
