--- a/s3reader/deployment-s3reader.yaml
+++ b/s3reader/deployment-s3reader.yaml
@@ -26,7 +26,7 @@ spec:
     spec: 
       dnsConfig:
         options: 
-          - name: "ndots"
+          - name: ndots
             value: 2    
       containers:          
         - name: node  
