--- a/s3reader/deployment-s3reader.yaml
+++ b/s3reader/deployment-s3reader.yaml
@@ -27,7 +27,7 @@ spec:
       dnsConfig:
         options: 
           - name: ndots
-            value: 2    
+            value: "2"
       containers:          
         - name: node  
           image: 937351930975.dkr.ecr.us-west-2.amazonaws.com/k8s-nodeapp:latest
