--- a/bootstrap-apps-argo/templates/application-storefront.yaml
+++ b/bootstrap-apps-argo/templates/application-storefront.yaml
@@ -18,7 +18,7 @@ spec:
       version: v4.1.3    
   destination:
     server: {{ .Values.spec.destination.server }}
-    namespace: stage
+    namespace: store
   syncPolicy:
     automated:
       prune: true
