--- a/bootstrap-apps-argo/values.yaml
+++ b/bootstrap-apps-argo/values.yaml
@@ -1,4 +1,4 @@
 spec:
   destination:
-    server: https://kubernetes.default.svc
+    server: https://7DBB43702AB9F505B4FF5FF79BF25C59.gr7.us-west-2.eks.amazonaws.com
 
