bootstrap-apps-argo/

--- a/bootstrap-apps-argo/templates/application-monitoring.yaml
+++ b/bootstrap-apps-argo/templates/application-monitoring.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io  
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"  
 spec:
   project: sarathy-workloads-project
   source:
