--- a/bootstrap-apps-argo/templates/application-storefront.yaml
+++ b/bootstrap-apps-argo/templates/application-storefront.yaml
@@ -6,14 +6,16 @@ metadata:
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"    
 spec:
   project: sarathy-workloads-project
   source:
     repoURL: git@github.com:vijayansarathy/fluxv2-deployment-apps.git
     targetRevision: HEAD
     path: deploy/overlays/stage
-    kustomize:
-      version: v4.1.3    
+    # kustomize:
+    #   version: v4.1.3    
   destination:
     server: {{ .Values.spec.destination.server }}
     namespace: store
