--- a/deploy/overlays/stage/backend/kustomization.yaml
+++ b/deploy/overlays/stage/backend/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: stage
+namespace: store
 resources:
   - secret.yaml
   - ../../../base/backend
