--- a/deploy/overlays/stage/frontend/kustomization.yaml
+++ b/deploy/overlays/stage/frontend/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: stage
+namespace: store
 
 #
 # Each entry in this list must be a path to a file, or a path referring to another kustomization directory
