--- a/crossplane-apps-argo/templates/application-crossplane-provider.yaml
+++ b/crossplane-apps-argo/templates/application-crossplane-provider.yaml
@@ -2,21 +2,25 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: providers 
+  name: crossplane-provider 
   namespace: argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-  annotations:
-    argocd.argoproj.io/sync-wave: "1"    
 spec:
   project: sarathy-workloads-project
   source:
     repoURL: git@github.com:vijayansarathy/fluxv2-deployment-apps.git
     targetRevision: HEAD
-    path: deploy/overlays/stage
+    path: deploy/infra-argo/crossplane-provider
   destination:
     server: {{ .Values.spec.destination.server }}
-    namespace: store
+    namespace: crossplane-system
   syncPolicy:
     automated:
-      prune: true
+      prune: true    
+    syncOptions:
+    - CreateNamespace=true
+    retry:
+      limit: 1
+      backoff:
+        duration: 5s 
+        factor: 2 
+        maxDuration: 1m   
