--- a/crossplane-apps-argo/templates/application-sealedsecrets.yaml
+++ b/crossplane-apps-argo/templates/application-sealedsecrets.yaml
@@ -2,23 +2,23 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: crossplane 
-  namespace: argocd 
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io    
-  annotations:
-    argocd.argoproj.io/sync-wave: "0"     
+  name: sealedsecrets 
+  namespace: argocd
 spec:
   project: sarathy-workloads-project
   source:
     repoURL: git@github.com:vijayansarathy/fluxv2-deployment-apps.git
     targetRevision: HEAD
-    path: deploy/infra-argo/crossplane
-    helm:
-      releaseName: crossplane     
+    path: deploy/infra-argo/sealed-secrets
   destination:
     server: {{ .Values.spec.destination.server }}
-    namespace: crossplane-system
+    namespace: sealed-secrets
   syncPolicy:
     automated:
-      prune: true    
+      prune: true
+    retry:
+      limit: 2
+      backoff:
+        duration: 5s 
+        factor: 2 
+        maxDuration: 1m
