--- a/crossplane-apps-argo/templates/application-sealedsecrets.yaml
+++ b/crossplane-apps-argo/templates/application-sealedsecrets.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: sealedsecrets 
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"   
 spec:
   project: sarathy-workloads-project
   source:
@@ -16,6 +18,8 @@ spec:
   syncPolicy:
     automated:
       prune: true
+    syncOptions:
+    - CreateNamespace=true      
     retry:
       limit: 2
       backoff:
