--- a/crossplane-apps-argo/templates/application-crossplane-provider.yaml
+++ b/crossplane-apps-argo/templates/application-crossplane-provider.yaml
@@ -4,6 +4,8 @@ kind: Application
 metadata:
   name: crossplane-provider 
   namespace: argocd
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"   
 spec:
   project: sarathy-workloads-project
   source:
