--- a/deploy/infra-argo/csi-secret-store/Chart.yaml
+++ b/deploy/infra-argo/csi-secret-store/Chart.yaml
@@ -1,11 +1,11 @@
 ---
 apiVersion: v2
-name: csi-secrets-store-argocd
+name: secrets-store-csi-driver-argocd
 description: A Helm chart for deploying CSI driver fir Kubernetes Secret Store
 type: application
 version: 1.0.0
 appVersion: "1.0"
 dependencies:
-- name: csi-secrets-store
-  version: 1.0.0
+- name: secrets-store-csi-driver
+  version: 0.2.0
   repository: https://kubernetes-sigs.github.io/secrets-store-csi-driver/charts
