--- a/deploy/infra-argo/crossplane-provider/secrets-mounter-ssm.yaml
+++ b/deploy/infra-argo/crossplane-provider/secrets-mounter-ssm.yaml
@@ -8,6 +8,10 @@ metadata:
   name: secrets-mounter
   namespace: crossplane-system
 
+#
+# Utility Deployment to mount the secrets stored in SSM parameter store and expose them as Kubernetes Secret
+# This works in conjunction with a SecretProviderClass resource
+#
 ---
 apiVersion: apps/v1
 kind: Deployment
