--- a/deploy/infra-argo/crossplane-provider/aws-provider.yaml
+++ b/deploy/infra-argo/crossplane-provider/aws-provider.yaml
@@ -2,6 +2,8 @@ apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
   name: crossplane-provider-aws
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"    
 spec:
   #
   # It is best to not to use the 'master' tag for the provider
