--- a/deploy/infra-argo/crossplane-provider/aws-providerconfig.yaml
+++ b/deploy/infra-argo/crossplane-provider/aws-providerconfig.yaml
@@ -5,6 +5,8 @@ metadata:
   # Note that the Crossplane provider for AWS looks specifically for a ProviderConfig named 'default'
   # 
   name: default
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"    
 spec:
   credentials:
     source: Secret
