--- a/deploy/infra-argo/crossplane-provider/sync-hook-sleep-job.yaml
+++ b/deploy/infra-argo/crossplane-provider/sync-hook-sleep-job.yaml
@@ -3,6 +3,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: wait-after-provider
+  namespace: crossplane-system
   annotations:
     argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
