--- a/argo/sealed-secrets/sealed-secrets-sealing-keys.yaml
+++ b/argo/sealed-secrets/sealed-secrets-sealing-keys.yaml
@@ -6,6 +6,6 @@ data:
 metadata:
   labels:
     sealedsecrets.bitnami.com/sealed-secrets-key: active
-  name: sealed-secrets-sealing-keys
+  name: sarathy-sealing-keys
   namespace: sealed-secrets
 type: kubernetes.io/tls
