crossplane-apps-argo

--- a/crossplane-apps-argo/templates/application-crossplane-provider.yaml
+++ b/crossplane-apps-argo/templates/application-crossplane-provider.yaml
@@ -4,14 +4,16 @@ kind: Application
 metadata:
   name: crossplane-provider 
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io   
   annotations:
-    argocd.argoproj.io/sync-wave: "3"   
+    argocd.argoproj.io/sync-wave: "3"       
 spec:
   project: sarathy-workloads-project
   source:
     repoURL: git@github.com:vijayansarathy/fluxv2-deployment-apps.git
     targetRevision: HEAD
-    path: deploy/infra-argo/crossplane-provider
+    path: argo/crossplane-provider
   destination:
     server: {{ .Values.spec.destination.server }}
     namespace: crossplane-system
