--- a/crossplane-apps-argo/templates/application-sealedsecrets.yaml
+++ b/crossplane-apps-argo/templates/application-sealedsecrets.yaml
@@ -4,14 +4,16 @@ kind: Application
 metadata:
   name: sealedsecrets 
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io    
   annotations:
-    argocd.argoproj.io/sync-wave: "1"   
+    argocd.argoproj.io/sync-wave: "1"       
 spec:
   project: sarathy-workloads-project
   source:
     repoURL: git@github.com:vijayansarathy/fluxv2-deployment-apps.git
     targetRevision: HEAD
-    path: deploy/infra-argo/sealed-secrets
+    path: argo/sealed-secrets
   destination:
     server: {{ .Values.spec.destination.server }}
     namespace: sealed-secrets
