--- a/crossplane-apps-argo/templates/application-crossplane-core.yaml
+++ b/crossplane-apps-argo/templates/application-crossplane-core.yaml
@@ -4,14 +4,16 @@ kind: Application
 metadata:
   name: crossplane 
   namespace: argocd 
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io   
   annotations:
-    argocd.argoproj.io/sync-wave: "2"   
+    argocd.argoproj.io/sync-wave: "2"       
 spec:
   project: sarathy-workloads-project
   source:
     repoURL: git@github.com:vijayansarathy/fluxv2-deployment-apps.git
     targetRevision: HEAD
-    path: deploy/infra-argo/crossplane-system
+    path: argo/crossplane-core
     helm:
       releaseName: crossplane     
   destination:
