argo/s3reader/deployment-s3reader.yaml

--- a/argo/s3reader/deployment-s3reader.yaml
+++ b/argo/s3reader/deployment-s3reader.yaml
@@ -72,6 +72,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: sleep
+  namespace: nodejs
   annotations:
     argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
