--- a/workload-apps-argo/templates/application-monitoring.yaml
+++ b/workload-apps-argo/templates/application-monitoring.yaml
@@ -13,6 +13,8 @@ metadata:
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io    
+  annotations:
+    argocd.argoproj.io/sync-wave: "50"    
 spec:
   project: sarathy-workloads-project
   source:
