--- a/argo/s3reader/deployment-s3reader.yaml
+++ b/argo/s3reader/deployment-s3reader.yaml
@@ -71,7 +71,7 @@ spec:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: sleep
+  generateName: post-s3reader
   namespace: nodejs
   annotations:
     argocd.argoproj.io/hook: Sync
