--- a/argo/recommender/secret.yaml
+++ b/argo/recommender/secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-credentials
-  namespace: java
+  namespace: nodejs
 type: Opaque
 data:
   POSTGRES_DATABASE: YW1hem9u
