--- a/crossplane-apps-argo/templates/application-crossplane-aws-eks.yaml
+++ b/crossplane-apps-argo/templates/application-crossplane-aws-eks.yaml
@@ -7,13 +7,13 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io   
   annotations:
-    argocd.argoproj.io/sync-wave: "3"       
+    argocd.argoproj.io/sync-wave: "2"       
 spec:
   project: sarathy-workloads-project
   source:
     repoURL: git@github.com:vijayansarathy/fluxv2-deployment-apps.git
     targetRevision: HEAD
-    path: argo/crossplane-provider
+    path: argo/crossplane-aws-eks
   destination:
     server: {{ .Values.spec.destination.server }}
     namespace: crossplane-system
