--- a/argo/crossplane-aws-eks/6-crossplane-eks-composition.yaml
+++ b/argo/crossplane-aws-eks/6-crossplane-eks-composition.yaml
@@ -4,6 +4,7 @@ metadata:
   name: crossplane-eks-composition
   annotations:
     argocd.argoproj.io/sync-wave: "100"   
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   ignoreCrossplaneConstraints: false
   package: public.ecr.aws/awsvijisarathy/crossplane-eks-composition:2.0.0
