--- a/argo/crossplane-aws-eks/5-aws-providerconfig.yaml
+++ b/argo/crossplane-aws-eks/5-aws-providerconfig.yaml
@@ -4,7 +4,8 @@ kind: ProviderConfig
 metadata:
   name: default
   annotations:
-    argocd.argoproj.io/sync-wave: "40"    
+    argocd.argoproj.io/sync-wave: "50"    
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   credentials:
     source: Secret
