--- a/argo/crossplane-aws-eks/7-eks-cluster-xr.yaml
+++ b/argo/crossplane-aws-eks/7-eks-cluster-xr.yaml
@@ -5,6 +5,7 @@ metadata:
   name: eks-prod-cluster
   annotations:
     argocd.argoproj.io/sync-wave: "300"   
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   parameters:
     region: us-west-2
