--- a/argo/crossplane-aws-provider/2-controller.yaml
+++ b/argo/crossplane-aws-provider/2-controller.yaml
@@ -249,7 +249,7 @@ spec:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  generateName: post-sealed-secret
+  generateName: after-sealed-secret
   namespace: sealed-secrets
   annotations:
     argocd.argoproj.io/hook: Sync
