--- a/argo/crossplane-aws-provider/4-aws-provider.yaml
+++ b/argo/crossplane-aws-provider/4-aws-provider.yaml
@@ -4,38 +4,21 @@ kind: Provider
 metadata:
   name: crossplane-provider-aws
   annotations:
-    argocd.argoproj.io/sync-wave: "20"   
+    argocd.argoproj.io/sync-wave: "30"   
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true 
 spec:
   package: "public.ecr.aws/awsvijisarathy/crossplane-provider-aws:v0.16.0"
 
----
-apiVersion: batch/v1
-kind: Job
-metadata:
-  generateName: pre-provider
-  annotations:
-    argocd.argoproj.io/hook: PreSync
-    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
-    argocd.argoproj.io/sync-wave: "30"
-spec:
-  template:
-    spec:
-      containers:
-        - name: page-down
-          image: alpine:latest
-          command: ["sleep", "30"]
-      restartPolicy: Never
 
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
-  generateName: post-provider
+  generateName: after-provider
   annotations:
     argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
-    argocd.argoproj.io/sync-wave: "30"
+    argocd.argoproj.io/sync-wave: "40"
 spec:
   template:
     spec:
