--- a/argo/crossplane-core/Chart.yaml
+++ b/argo/crossplane-core/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 name: crossplane-argocd
-description: A Helm chart for deploying Crossplane
+description: A Helm chart for deploying core Crossplane, Crossplane AWS provider, Crossplane Configuration package and Composite Resource for creating EKS cluster
 type: application
 version: 1.0.0
 appVersion: "1.0"
