--- a/argo/monitoring/templates/deployment-recommender.yaml
+++ b/argo/monitoring/templates/deployment-recommender.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: nodejs
+  name: java
   
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: recommender-app
-  namespace: nodejs
+  namespace: java
   annotations:
     argocd.argoproj.io/sync-wave: "10"    
 spec:
@@ -94,7 +94,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: recommender-svc
-  namespace: nodejs
+  namespace: java
   annotations:
     argocd.argoproj.io/sync-wave: "20"    
 spec:
@@ -114,7 +114,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   generateName: post-recommender
-  namespace: nodejs
+  namespace: java
   annotations:
     argocd.argoproj.io/hook: Sync
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
