--- a/flux/infra/adot/kustomization.yaml
+++ b/flux/infra/adot/kustomization.yaml
@@ -1,6 +1,7 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - helm-repositories
-  - adot
+  - namespace.yaml
+  - adot-collector-prometheus-xray.yaml
 
