--- a/flux/infra/adot/service-account.yaml
+++ b/flux/infra/adot/service-account.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: adot-collector
+  name: aws-otel-collector
   namespace: aws-otel-eks
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::937351930975:role/EKS-ADOT-ServiceAccount-Role
