flux/infra/adot

--- a/flux/infra/adot/service-account.yaml
+++ b/flux/infra/adot/service-account.yaml
@@ -3,5 +3,9 @@ kind: ServiceAccount
 metadata:
   name: aws-otel-collector
   namespace: aws-otel-eks
+  #
+  # There is no mechanism yet to create the IAM Role using Flux.
+  # This role must have already been created and the OIDC provider added to IAM
+  #  
   annotations:
     eks.amazonaws.com/role-arn: arn:aws:iam::937351930975:role/EKS-ADOT-ServiceAccount-Role
