--- a/flux/infra/adot/adot-collector-cloudwatch-xray.yaml
+++ b/flux/infra/adot/adot-collector-cloudwatch-xray.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: adot-collector-prometheus-xray
+  name: adot-collector-cloudwatch-xray
   namespace: aws-otel-eks
 spec:
   replicas: 1
@@ -10,14 +10,14 @@ spec:
     matchLabels:
       app: adot-collector
       role: observability
-      metrics: prometheus
+      metrics: cloudwatch
       traces: xray
   template:
     metadata:
       labels:
         app: adot-collector
         role: observability
-        metrics: prometheus
+        metrics: cloudwatch
         traces: xray      
     spec:
       serviceAccount: aws-otel-collector
@@ -61,7 +61,7 @@ spec:
   selector:
     app: adot-collector
     role: observability
-    metrics: prometheus
+    metrics: cloudwatch
     traces: xray  
 
 ---
@@ -356,23 +356,64 @@ data:
       batch/metrics:
         timeout: 60s       
 
+      #
+      # Processor to transform the names of existing labels and/or add new labels
+      #  
+      metricstransform/labelling:
+        transforms:
+          - include: .*
+            match_type: regexp
+            action: update
+            operations:
+              - action: add_label
+                new_label: EKS_Cluster
+                new_value: ${CLUSTER_NAME}
+              - action: update_label
+                label: kubernetes_pod_name
+                new_label: EKS_PodName
+              - action: update_label
+                label: kubernetes_namespace
+                new_label: EKS_Namespace
+      #
+      # Filter processor to include only the metrics that we are interested in
+      # Add each metric under the metric_names field. 
+      # Regular expressions may be used to identify the metrics
+      #                
+      filter/include:
+        metrics:
+          include:
+            match_type: regexp
+            metric_names:
+              - ^http_requests_total$   
+
     exporters:
       awsxray:
       #
-      # The workspace ID has to be changed for the targt environment
-      #
-      awsprometheusremotewrite:
-        endpoint: "https://aps-workspaces.us-east-1.amazonaws.com/workspaces/ws-46773539-a8c6-4344-a90b-948381f66811/api/v1/remote_write"
-        aws_auth:
-          region: "us-east-1"
-          service: "aps"    
+      # AWS EMF exporter that sends metrics data as performance log events to CloudWatch
+      # Only the metrics that were filtered out by the processors get to this stage of the pipeline
+      # Under the metric_declarations field, add one or more sets of CloudWatch dimensions 
+      # For each set of dimensions, add a list of metrics under the metric_name_selectors field
+      # Metrics names may be listed explicitly or using regular expressions
+      # Data from performance log events will be aggregated by CloudWatch using these dimensions to create a CloudWatch custom metric
+      #      
+      awsemf:
+        namespace: ContainerInsights/Prometheus
+        log_group_name: '/aws/containerinsights/${CLUSTER_NAME}/prometheus'
+        resource_to_telemetry_conversion:
+          enabled: true
+        dimension_rollup_option: NoDimensionRollup
+        parse_json_encoded_attr_values: [Sources, kubernetes]
+        metric_declarations:
+          - dimensions: [[EKS_Cluster, EKS_Namespace, EKS_PodName]]
+            metric_name_selectors:
+              - http_requests_total          
           
     service:
       pipelines:
         metrics:
           receivers: [prometheus]
-          processors: [batch/metrics]
-          exporters: [awsprometheusremotewrite]
+          processors: [filter/include,batch/metrics,metricstransform/labelling]
+          exporters: [awsemf]          
         traces:
           receivers: [awsxray]
           exporters: [awsxray]          
