changed image URLs

--- a/flux/overlays/stage/backend/deployment-patch.yaml
+++ b/flux/overlays/stage/backend/deployment-patch.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: go
-        image: 937351930975.dkr.ecr.us-east-1.amazonaws.com/k8s-backend:normal
+        image: 031791575028.dkr.ecr.us-east-1.amazonaws.com/k8s-backend:v1
         resources:
         imagePullPolicy: Always
         resources:
