--- a/flux/overlays/stage/frontend/deployment-patch.yaml
+++ b/flux/overlays/stage/frontend/deployment-patch.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: go
-        image: 937351930975.dkr.ecr.us-east-1.amazonaws.com/k8s-frontend:healthy # {"$imagepolicy": "flux-system:app-image-stage-policy"}
+        image: 031791575028.dkr.ecr.us-east-1.amazonaws.com/k8s-frontend:v1 # {"$imagepolicy": "flux-system:app-image-stage-policy"}
         imagePullPolicy: Always
         resources:
           requests:
